Use Java modules, upgrade dependencies, use Java 23