@@ -1,39 +1,58 @@
 plugins {
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+    // org.beryx.jlink is currently unmaintained, see: https://github.com/beryx/badass-jlink-plugin/issues/223
+    // Fork with patches for newer JDKS:
+    // https://www.reddit.com/r/java/comments/1g8o17x/patched_versions_of_badassjlink_and_badassruntime/
+    id 'com.dua3.gradle.jlink' version '3.0.1-patch-1'
+
     id 'idea'
-    id 'java'
-    id 'org.openjfx.javafxplugin' version '0.0.14'
-    id 'org.beryx.runtime' version '1.12.7'
 }
 
+java.toolchain.languageVersion = JavaLanguageVersion.of(23)
 
 dependencies {
-    implementation 'net.java.dev.jna:jna-platform:5.12.1'
+    implementation 'net.java.dev.jna:jna-platform-jpms:5.15.0'
 }
 
 javafx {
-    version = '17'
+    version = '23.0.1'
     modules = ['javafx.graphics']
+    platform = 'win'
 }
 
+var addJvmArgs = ['--enable-preview']
 
+tasks.withType(JavaCompile).forEach {
+    it.options.compilerArgs.addAll addJvmArgs
+}
 
 application {
+    mainModule = 'dev.peksa.speedrun'
     mainClass = 'dev.peksa.speedrun.journey.app.Launcher'
+    applicationDefaultJvmArgs.addAll addJvmArgs
 }
 
-runtime  {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+jlink  {
+    options = ['--strip-debug', '--compress', 'zip-9', '--no-header-files', '--no-man-pages', '--strip-native-commands',
+               '--strip-java-debug-attributes', '--dedup-legal-notices=error-if-not-same-content']
     launcher {
+        jvmArgs = addJvmArgs
         noConsole = false
+        name = 'peksa-fancy-flyer-tool'
     }
     jpackage {
-        imageOptions = ['--win-console', '--icon', "icon.ico"]
+        imageOptions = ['--win-console', '--description', "Peksa's fancy flyer tool", '--copyright', 'Copyright (c) 2024 Peksa']
+        vendor = 'Peksa'
+        description = 'Asd'
+        icon = 'icon.ico'
+        version = '5.0.0'
         skipInstaller = true
         targetPlatformName = 'win'
     }
 }
 
-
+assemble.dependsOn jpackage
 
 repositories {
     mavenCentral()
